fix layout shifts on modal popup

--- a/newswise-frontend/src/styles/general.scss
+++ b/newswise-frontend/src/styles/general.scss
@@ -32,10 +32,6 @@ body {
   margin-bottom: 15px;
 }
 
-.cdk-global-scrollblock {
-  overflow-y: hidden !important;
-}
-
 .mdc-dialog__content {
   scrollbar-gutter: stable both-edges;
 }
